// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthVault - mint mints osTokens to the receiver 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 145765,
}
`;

exports[`EthVault - mint updates position accumulated fee 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 145765,
}
`;

exports[`EthVault - mint updates position accumulated fee 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 124073,
}
`;
